# arraytainers

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
arraytainers/: __init__.py  _contents.py  arraytainer.py  jaxtainer.py  numpytainer.py
arraytainers/base/: __init__.py  arrays.py  arraytainer.py  base.py  func_handlers.py  functions.py  get.py  getset.py  getters.py  iters.py  preprocess.py  set.py  setters.py
arraytainers/new/: __init__.py  _contents.py  arraytainer.py  jaxtainer.py
examples/: Sandbox.ipynb  amortised_example.ipynb  gaussian_example.ipynb  mixture_example.ipynb
tests/: ab.py  conftest.py  helpers.py  test_array_methods.py  test_class.py  test_constructors.py  test_getting.py  test_jacfwd_and_vmap.py  test_jax.py  test_jaxtainer.py  test_methods.py  test_methods_and_attrs.py  test_numpy_funcs.py  test_numpytainer.py  test_reshape.py  test_setting.py  test_values.py
tests/main_tests/: test_array_methods.py  test_class.py  test_functions.py  test_indexing.py  test_iterables.py  test_setting.py  utils.py
