[metadata]
name = arraytainers
version = 0.0.0
author = Matthew Bilton
author_email = Matt.A.Bilton@gmail.com
long_description = file: README.md
description = Dictionary-like and list-like objects for Numpy and Jax arrays.
keywords = array, container, arraytainer, numpy, jax, dictionary, list
url = https://github.com/MABilton/arraytainers
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.5
install_requires =
    numpy
    more_itertools
packages = find: