[metadata]
name = arraytainers
version = attr: arraytainers.__version__
author = Matthew Bilton
author_email = Matt.A.Bilton@gmail.com
long_description = file: README.md
description = nestable dict-like and list-like containers for numpy and jax arrays.
keywords = array, container, arraytainer, numpy, jax, dictionary, list
url = https://github.com/MABilton/arraytainers
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.5
install_requires =
    numpy
    more_itertools
packages = find:

[options.extras_require]
jaxtainers =
    jax
    jaxlib

[options.packages.find]
exclude =
    tests
    examples
